@startuml

title __CONTROLLER's Class Diagram__\n

  namespace de.applegreen.household {
    namespace web.controller {
      class de.applegreen.household.web.controller.ClosingsController {
          + ClosingsController()
          + showClosings()
          + showDetail()
      }
    }
  }
  

  namespace de.applegreen.household {
    namespace web.controller {
      class de.applegreen.household.web.controller.InformationController {
          + alive()
      }
    }
  }
  

  namespace de.applegreen.household {
    namespace web.controller {
      class de.applegreen.household.web.controller.LandingpageController {
          + home()
          + toClosings()
          + toList()
      }
    }
  }
  

  namespace de.applegreen.household {
    namespace web.controller {
      class de.applegreen.household.web.controller.ListController {
          + ListController()
          + addItem()
          + commitList()
          + deletitem()
          + saveForLater()
          + showCurrent()
          - init()
      }
    }
  }
  

  de.applegreen.household.web.controller.ClosingsController .up.|> de.applegreen.household.web.util.HasLogger
  de.applegreen.household.web.controller.ClosingsController o-- de.applegreen.household.persistence.ClosingRepository : closingRepository
  de.applegreen.household.web.controller.ListController .up.|> de.applegreen.household.web.util.HasLogger
  de.applegreen.household.web.controller.ListController o-- de.applegreen.household.persistence.BillRepository : billRepository
  de.applegreen.household.web.controller.ListController o-- de.applegreen.household.persistence.ClosingRepository : closingRepository
  de.applegreen.household.web.controller.ListController o-- de.applegreen.household.model.GroceryList : currentList
  de.applegreen.household.web.controller.ListController o-- de.applegreen.household.persistence.GroceryListRepository : groceryListRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
